# claude_sync

./: .gitignore  .gitmodules  IMPLEMENTATION_PLAN.md  LEVELDB_INTEGRATION.md  LEVELDB_MCP.md  LEVELDB_MCP_INSTRUCTIONS.md  LICENSE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_next_steps.md  SETUP_GUIDE.md  analyze_project_structure.py  background.txt  check_claude_auth.py  claude-project-knowledge-mcp-plan-v2.md  claude-project-knowledge-mcp-plan.md  claude_auth_notes.md  claude_sync_tdd_plan.md  debug_chrome_connection.py  debug_chrome_pages.py  debug_extraction.py  debug_projects_page.py  example_usage.py  extract_dlpos_files.py  improved_implementation_example.py  jest.config.js  launch_chrome_debug.py  mcp-vs-sdk.txt  minimal_playwright_poc.py  monitor_chrome_memory.py  navigate_projects_v3.py  navigate_to_projects.py  navigate_to_projects_v2.py  package.json  persistent_sporadic_sync.py  playwright_claude_access_guide.md  project_names_clean.txt  project_names_clean_detailed.txt  pyproject.toml  (+23 more)
claude_sync/: __init__.py
claude_sync/browser/: __init__.py  config.py  connection.py  manager.py
claude_sync/extractors/: __init__.py  knowledge.py  knowledge_v2.py  projects.py
claude_sync/models/: __init__.py  knowledge.py  project.py  sync.py
claude_sync/sync/: __init__.py  orchestrator.py  storage.py
config/: claude_sync_startup.sh  com.claude.sync.plist
coverage/: lcov.info
coverage/lcov-report/: index.html
docs/: claude_backup_tool_plan.md  claude_sync_tdd_plan.md  files_to_keep.md  implementation_status.md  library_comparison.md  production_plan_tdd.md  unattended_comparison.md
scripts/: clean_debug_profiles.py  debug-leveldb.js  get_projects_from_tab.py  launch_chrome_with_claude.py  manual_test_chrome_client.py  sanitize_fixtures.py  test-leveldb-mode.js  test_claude_access.py  test_dlpos_knowledge_extraction.py  test_robust_client.py  test_with_mock_server.py
src/: cli.ts  index.ts
src/__tests__/: mock-client.test.ts  sync-integration.test.ts  sync.test.ts
src/api/: browser-automation.js  claude-browser-client.ts  claude-client.js  claude-desktop-client.ts  claude.ts  client-factory.ts  interfaces.ts  mcp-leveldb-client.ts  mock-claude-client.ts
src/chrome/: client.py  exceptions.py  robust_client.py
src/cli/: cli.js
src/sync/: sync.ts  (+7 more)
test/: README.md  jest.setup.js  setup.js  setup.ts  simple.test.js  simple.test.ts  verify.test.ts  vitest-verify.test.ts  vitest.setup.ts
tests/: __init__.py  conftest.py
(+67 files in other folders)
